# lambdapi

./: .gitignore  CHANGES.md  GNUmakefile  lambdapi-lsp.opam  lambdapi.opam
lp-lsp/: README.md  jbuild  lp_doc.ml  lp_lsp.ml  lsp_base.ml
src/: dune  handle.ml  jbuild  pure.ml  sign.ml  solve.ml
