opam-version: "1.2"
maintainer: "dedukti-dev@inria.fr"
authors: "Rodolphe Lepigre <rodolphe.lepigre@inria.fr>"
homepage: "https://github.com/rlepigre/lambdapi"
bug-reports: "https://github.com/rlepigre/lambdapi/issues"
dev-repo: "https://github.com/ejgallego/lambdapi.git"
license: "Undetermined"

available: [ ocaml-version >= "4.06.1" ]

depends: [
  "jbuilder"     { build }
  "bindlib"      { >= "5.0.0" }
  "earley"
  "earley-ocaml"
]

build: [ [ "jbuilder" "build" "-p" name "-j" jobs ] ]
