opam-version: "1.2"
maintainer: "dedukti-dev@inria.fr"
authors: [ "Rodolphe Lepigre <rodolphe.lepigre@inria.fr>"
           "Frédéric Blanqui <frederic.blanqui@inria.fr>" ]
homepage: "https://github.com/rlepigre/lambdapi"
bug-reports: "https://github.com/rlepigre/lambdapi/issues"
dev-repo: "https://github.com/ejgallego/lambdapi.git"
license: "CeCILL"

available: [ ocaml-version >= "4.06.1" ]

depends: [
  "dune"         { build }
  "bindlib"      { >= "5.0.0" }
  "earley"       { >= "1.0.2" }
  "earley-ocaml" { >= "1.0.2" }
  "timed"        { >= "1.0"   }
]

build: [ [ "dune" "build" "-p" name "-j" jobs ] ]
